fixed subjects nav vertical alignment

--- a/src/assets/source/styles/partials/_serlo_header.scss
+++ b/src/assets/source/styles/partials/_serlo_header.scss
@@ -38,7 +38,7 @@
 
     position: absolute;
     top: -15px;
-    left: 0px;
+    left: 13px;
 
     padding: 75px 20px 20px;
     width: 360px;
@@ -54,6 +54,7 @@
   .subject-dropdown-title {
     @include inline-block;
 
+    vertical-align: inherit;
     border-right: 2px solid #E4E6E6;
     padding: 3px 18px;
   }
